--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,25 @@
 asgiref==3.5.0
 backports.zoneinfo==0.2.1
 black==22.3.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
 click==8.1.2
 Django==4.0.3
+django-cors-headers==3.11.0
+django-filter==21.1
 django-reports-admin==1.1.0
+djangorestframework==3.13.1
+idna==3.3
 mypy-extensions==0.4.3
 pathspec==0.9.0
 Pillow==9.1.0
 platformdirs==2.5.1
+python-dateutil==2.8.2
 python-dotenv==0.20.0
+pytz==2022.1
+requests==2.27.1
+six==1.16.0
 sqlparse==0.4.2
 tomli==2.0.1
 typing-extensions==4.1.1
+urllib3==1.26.9
