--- a/requirements.txt
+++ b/requirements.txt
@@ -7,19 +7,25 @@ click==8.1.2
 Django==4.0.3
 django-cors-headers==3.11.0
 django-filter==21.1
-django-reports-admin==1.1.0
 djangorestframework==3.13.1
+httplib2==0.20.4
 idna==3.3
 mypy-extensions==0.4.3
+oauth2client==4.1.3
 pathspec==0.9.0
 Pillow==9.1.0
 platformdirs==2.5.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyparsing==3.0.9
 python-dateutil==2.8.2
 python-dotenv==0.20.0
 pytz==2022.1
 requests==2.27.1
+rsa==4.8
 six==1.16.0
 sqlparse==0.4.2
 tomli==2.0.1
 typing-extensions==4.1.1
+uritemplate==4.1.1
 urllib3==1.26.9
